feat: Create a new endpoint /reports on the restga http server in order to store remote test result from the output http-html-report
